<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fill the Blanks</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="fill_the_survey">Fill the Survey</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="opinion">Opinion about Coursera</string>
    <string name="asd">Opinion about Coursera</string>

    <string-array name="color">
        <item>Favorite Color</item>
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Pink</item>
        <item>Orange</item>
        <item>White</item>
        <item>Violet</item>
    </string-array>
    <string-array name="sportstar">
        <item>Favorite SportStar</item>
        <item>Roger Federer</item>
        <item>Sachin Tendulkar</item>
        <item>Cristiano Ronaldo</item>
    </string-array>

    <string name="submit">Submit</string>
    <string name="title_activity_star">StarActivity</string>
    <string name="star">Star</string>

</resources>