<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Beige"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity" >

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fill_the_survey"
            android:textAlignment="inherit"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ProgressBar
            android:id="@+id/survey_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="8"
            android:progress="0" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="28dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textIsSelectable="false" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/opinion"
            android:inputType="textMultiLine"
            android:minLines="3" />

        <Spinner
            android:id="@+id/background_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/color"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/sports_star"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/sportstar"
            android:spinnerMode="dropdown" />

        <RatingBar
            android:id="@+id/survey_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="5"
            android:numStars="5"
            android:rating="0"
            android:stepSize="0.5" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/submit" />

        

        <ImageView
            android:id="@+id/favStar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/star"
            android:src="@android:drawable/btn_star_big_on"
            android:visibility="invisible" />
        <TextView
            android:id="@+id/mailid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:visibility="invisible" />
    </LinearLayout>

</ScrollView>